--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <span class="btn">View Application</span>
       </a>
 
-      <a href="Book A Speaker/bookaspeaker.html" class="card">
+      <a href="Book%20A%20Speaker/bookaspeaker.html" class="card">
         <h2>Book A Speaker</h2>
         <p>Request a speaker from Love Life Now for your upcoming event or organization.</p>
         <span class="btn">Book Now</span>
