--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <span class="btn">Book Now</span>
       </a>
 
-      <a href="Contact Form/Contact Form.html" class="card">
+      <a href="Contact%20Form/Contact%20Form.html" class="card">
         <h2>Contact Us</h2>
         <p>General inquiries and communication with the Love Life Now team.</p>
         <span class="btn">Get in Touch</span>
@@ -146,7 +146,7 @@
         <span class="btn">Make a Donation</span>
       </a>
 
-      <a href="Newsletter Subscription/NewsletterSubscription.html" class="card">
+      <a href="Newsletter%20Subscription/NewsletterSubscription.html" class="card">
         <h2>Newsletter</h2>
         <p>Subscribe to stay updated with our latest news, events, and stories.</p>
         <span class="btn">Subscribe</span>
