--- a/Newsletter Subscription/NewsletterSubscription.html
+++ b/Newsletter Subscription/NewsletterSubscription.html
@@ -102,7 +102,7 @@
                 <div class="errors hidden"></div>
 
                 <div class="section contact">
-                    <h3>Your Information</h3>
+                    <h3>Subscribe to LLN's Newsletter!</h3>
                     <div class="form-row form-row-3">
                         <div class="field text first-name required">
                             <label for="first-name">
