--- a/Volunteer/VolunteerForm.html
+++ b/Volunteer/VolunteerForm.html
@@ -102,7 +102,7 @@
                 <div class="errors hidden"></div>
 
                 <div class="section contact">
-                    <h3>Your Information</h3>
+                    <h3>Volunteer Inquiry Form </h3>
                     <div class="form-row">
                         <div class="field text first-name required">
                             <label for="first-name">
