--- a/Volunteer/VolunteerForm.html
+++ b/Volunteer/VolunteerForm.html
@@ -144,7 +144,7 @@
                             <span class="label">Which volunteer opportunity are you interested in?</span>
                             <span class="required-star">*</span>
                         </label>
-                        <input id="CustomInteractionField_1037313" name="CustomInteractionField_1037313" class="required" type="text" maxlength="255" placeholder="e.g., Event support, Fundraising, Administrative help, Outreach...">
+                        <input id="CustomInteractionField_1037313" name="CustomInteractionField_1037313" class="required" type="text" maxlength="255" placeholder="example: Drive support, host LLN event">
                     </div>
                     <div class="field text CustomInteractionField_1058817">
                         <label for="CustomInteractionField_1058817">
