--- a/Donate/donateform.html
+++ b/Donate/donateform.html
@@ -483,27 +483,21 @@
 '  <form id="donation-form" class="donation-form" method="post" onsubmit="event.preventDefault(); collectPayment();">' + 
 '    <div class="errors hidden"></div>' + 
 '    <div class="section donation">' + 
-'      <h3>Donation</h3>' + 
+'      <h3>Donate Now</h3>' + 
 '      <div class="field radio 537600 required" >' + 
 '<label for="537600"><input id="537600" name="donation-level" class="required" type="radio" value="50.000000" maxlength="255"></input><span class="label">$50.00 - Transportation</span></label>' + 
 '</div>' + 
 '<div class="field radio 537601 required" >' + 
-'<label for="537601"><input id="537601" name="donation-level" class="required" type="radio" value="100.000000" maxlength="255"></input><span class="label">$100.00 - Food</span></label>' + 
-'</div>' + 
-'<div class="field radio 537602 required" >' + 
-'<label for="537602"><input id="537602" name="donation-level" class="required" type="radio" value="200.000000" maxlength="255"></input><span class="label">$200.00 - Socks</span></label>' + 
-'</div>' + 
-'<div class="field radio 537603 required" >' + 
-'<label for="537603"><input id="537603" name="donation-level" class="required" type="radio" value="500.000000" maxlength="255"></input><span class="label">$500.00 - Emergency Stays</span></label>' + 
-'</div>' + 
-'<div class="field radio 537604 required" >' + 
-'<label for="537604"><input id="537604" name="donation-level" class="required" type="radio" maxlength="255"></input><span class="label">$0.00 - Donate Any Amount</span></label>' + 
-'</div>' + 
-'<div class="field radio other-option required" >' + 
-'<label for="other-option"><input id="other-option" name="donation-level" class="required" type="radio" maxlength="255"></input><span class="label">Other</span></label>' + 
-'</div>' + 
-'<div class="field text other-amount" >' + 
-'<input id="other-amount" name="other-amount" class="otherAmount" type="text" placeholder="$0.00"></input>' + 
+'<label for="537601"><input id="537601" name="donation-level" class="required" type="radio" value="100.000000" maxlength="255"></input><span class="label">$100.00 - Food</span></label>' +
+'</div>' +
+'<div class="field radio 537603 required" >' +
+'<label for="537603"><input id="537603" name="donation-level" class="required" type="radio" value="100.000000" maxlength="255"></input><span class="label">$100.00 - Emergency Stays</span></label>' +
+'</div>' +
+'<div class="field radio other-option required" >' +
+'<label for="other-option"><input id="other-option" name="donation-level" class="required" type="radio" maxlength="255"></input><span class="label">Other Amount</span></label>' +
+'</div>' +
+'<div class="field text other-amount" >' +
+'<input id="other-amount" name="other-amount" class="otherAmount" type="text" placeholder="$0.00"></input>' +
 '</div>' + 
 '' + 
 '</div>' + 
