--- a/Book A Speaker/bookaspeaker.html
+++ b/Book A Speaker/bookaspeaker.html
@@ -42,8 +42,10 @@
         .btn-submit-interaction:hover { background: linear-gradient(135deg, var(--lln-purple-700), var(--lln-purple-800)); }
         .btn-submit-interaction:disabled, .btn-submit-interaction.disabled { opacity: 0.6; cursor: not-allowed; }
         .section.captcha { margin: 1rem 0; }
-        .donation-success { text-align: center; padding: 2rem; }
-        .donation-success h2 { color: var(--lln-purple-700); }
+        .donation-success { display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 2rem; min-height: 400px; }
+        .donation-success img { max-width: 180px; height: auto; margin: 1rem 0; }
+        .donation-success h2 { color: var(--lln-purple-700); font-size: 1.5rem; margin: 1rem 0; }
+        .donation-success p { font-size: 1.1rem; color: var(--lln-gray-600); line-height: 1.6; margin: 0.5rem 0; }
 
         /* Hide address section - not needed for speaker booking */
         .section.address { display: none; }
@@ -200,8 +202,10 @@
         '</div>';
 
         var successHtml763905 = '<div class="donation-success">' +
+            '<img src="../shared/Thanks You!.png" alt="Love Life Now Foundation Thanks You!">' +
             '<h2>Thank You!</h2>' +
             '<p>Someone will follow-up with you in 48 hours for more information.</p>' +
+            '<img src="../shared/Thanks You!.png" alt="Love Life Now Foundation Thanks You!">' +
             '</div>';
 
         (function($) {
