--- a/Contact Form/Contact Form.html
+++ b/Contact Form/Contact Form.html
@@ -80,6 +80,11 @@
         .interaction-form textarea {
             min-height: 150px;
         }
+        /* Success message styling */
+        .donation-success { display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 2rem; min-height: 400px; }
+        .donation-success img { max-width: 180px; height: auto; margin: 1rem 0; }
+        .donation-success h2 { color: var(--lln-purple-700); font-size: 1.5rem; margin: 1rem 0; }
+        .donation-success p { font-size: 1.1rem; color: var(--lln-gray-600); line-height: 1.6; margin: 0.5rem 0; }
     </style>
 </head>
 
@@ -168,9 +173,11 @@
         var insertForm1050624 = function () {
             var html1050624 = document.getElementById('styled-form-content').innerHTML;
             var successHtml1050624 = '<div class=\'donation-success\'>' +
+                '  <img src="../shared/Thanks You!.png" alt="Love Life Now Foundation Thanks You!">' +
                 '  <h2>Message Received!</h2>' +
                 '  <p>Someone will get back to you within 24 to 48 hours.</p>' +
                 '  <p>Please note, if you are looking for assistance from the Get Safe Fund, please fill out the application at <a href="https://www.lovelifenow.org/getsafe" target="_blank">www.lovelifenow.org/getsafe</a></p>' +
+                '  <img src="../shared/Thanks You!.png" alt="Love Life Now Foundation Thanks You!">' +
                 '</div>';
 
             (function ($) {
