--- a/Donate/donateform.html
+++ b/Donate/donateform.html
@@ -280,19 +280,33 @@
 
         /* Success message */
         .donation-success {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
             text-align: center;
             padding: 2rem;
+            min-height: 400px;
+        }
+
+        .donation-success img {
+            max-width: 180px;
+            height: auto;
+            margin: 1rem 0;
         }
 
         .donation-success h2 {
             color: var(--lln-purple-700, #7c3aed);
             font-family: var(--font-heading, 'Poppins', sans-serif);
-            margin-bottom: 1rem;
+            margin: 1rem 0;
+            font-size: 1.5rem;
         }
 
         .donation-success p {
             color: var(--lln-gray-600, #4b5563);
             line-height: 1.6;
+            font-size: 1.1rem;
+            margin: 0.5rem 0;
         }
 
         /* Hide payment type options we don't use (EFT, PayPal) */
@@ -981,9 +995,10 @@
 '</div>' + 
 '' + 
 '' +  '';var successHtml535552 = '<div class=\'donation-success\'>' +
+                                                       '  <img src="../shared/Thanks You!.png" alt="Love Life Now Foundation Thanks You!">' +
                                                        '  <h2>LLN Thanks You<br>for Your Donation!</h2>' +
-                                                       '  <p>We acknowledge, with great thanks, your generous donation,<br>which contributes to our year-round domestic violence (DV) awareness initiatives.</p>' + 
-                                                        '   ' + 
+                                                       '  <p>We acknowledge, with great thanks, your generous donation,<br>which contributes to our year-round domestic violence (DV) awareness initiatives.</p>' +
+                                                       '  <img src="../shared/Thanks You!.png" alt="Love Life Now Foundation Thanks You!">' +
                                                         '</div>';( function($) {if (Bloomerang.useDonationId('535552')) { 
                                 Bloomerang.useProcessor('534529', 'StripeExpress', 'pk_live_iZYXFefCkt380zu63aqUIo7y');
                             } else {
