--- a/Volunteer/VolunteerForm.html
+++ b/Volunteer/VolunteerForm.html
@@ -76,6 +76,11 @@
         .form-loading.hidden {
             display: none;
         }
+        /* Success message styling */
+        .donation-success { display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 2rem; min-height: 400px; }
+        .donation-success img { max-width: 180px; height: auto; margin: 1rem 0; }
+        .donation-success h2 { color: var(--lln-purple-700); font-size: 1.5rem; margin: 1rem 0; }
+        .donation-success p { font-size: 1.1rem; color: var(--lln-gray-600); line-height: 1.6; margin: 0.5rem 0; }
     </style>
 </head>
 
@@ -170,8 +175,10 @@
         var insertForm1048576 = function () {
             var html1048576 = document.getElementById('styled-form-content').innerHTML;
             var successHtml1048576 = '<div class=\'donation-success\'>' +
+                '  <img src="../shared/Thanks You!.png" alt="Love Life Now Foundation Thanks You!">' +
                 '  <h2>Thank You for Your Interest!</h2>' +
                 '  <p>Thank you for your heart to serve alongside us!<br>We will be in touch soon to follow-up.</p>' +
+                '  <img src="../shared/Thanks You!.png" alt="Love Life Now Foundation Thanks You!">' +
                 '</div>';
 
             (function ($) {
