--- a/Newsletter Subscription/NewsletterSubscription.html
+++ b/Newsletter Subscription/NewsletterSubscription.html
@@ -151,7 +151,7 @@
             var html751616 = document.getElementById('styled-form-content').innerHTML;
             var successHtml751616 = '<div class=\'donation-success\'>' +
                 '  <img src="../shared/Thanks You!.png" alt="Love Life Now Foundation Thanks You!">' +
-                '  <h2>Thank you for Subscribing!</h2>' +
+                '  <h2>Thank you for subscribing!</h2>' +
                 '</div>';
 
             (function ($) {
