--- a/Contact Form/Contact Form.html
+++ b/Contact Form/Contact Form.html
@@ -81,7 +81,7 @@
             min-height: 150px;
         }
         /* Success message styling */
-        .donation-success { display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 2rem; min-height: 400px; }
+        .donation-success { display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 2rem; min-height: 100vh; }
         .donation-success img { max-width: 180px; height: auto; margin: 1rem 0; }
         .donation-success h2 { color: var(--lln-purple-700); font-size: 1.5rem; margin: 1rem 0; }
         .donation-success p { font-size: 1.1rem; color: var(--lln-gray-600); line-height: 1.6; margin: 0.5rem 0; }
