--- a/Donate/donateform.html
+++ b/Donate/donateform.html
@@ -286,7 +286,7 @@
             justify-content: center;
             text-align: center;
             padding: 2rem;
-            min-height: 400px;
+            min-height: 100vh;
         }
 
         .donation-success img {
