--- a/shared/preview/success-preview.html
+++ b/shared/preview/success-preview.html
@@ -102,7 +102,7 @@
             justify-content: center;
             text-align: center;
             padding: 2rem;
-            min-height: 400px;
+            min-height: 100vh;
         }
 
         .donation-success img {
