--- a/Book A Speaker/bookaspeaker.html
+++ b/Book A Speaker/bookaspeaker.html
@@ -76,7 +76,7 @@
         '    <div class="errors hidden"></div>' +
 
         '    <div class="section contact">' +
-        '      <h3>Contact Information</h3>' +
+        '      <h3>Booking Inquiry Form</h3>' +
         '      <div class="field text first-name required">' +
         '        <label for="first-name"><span class="label">First Name</span><span class="required-star">*</span></label>' +
         '        <input id="first-name" name="first-name" class="required" type="text">' +
