--- a/Book A Speaker/bookaspeaker.html
+++ b/Book A Speaker/bookaspeaker.html
@@ -162,15 +162,15 @@
         '        <label for="CustomInteractionField_947201"><span class="label">Event Location</span><span class="required-star">*</span></label>' +
         '        <input id="CustomInteractionField_947201" name="CustomInteractionField_947201" class="required" type="text" maxlength="255">' +
         '      </div>' +
-        '      <div class="field text CustomInteractionField_948225 required">' +
-        '        <label for="CustomInteractionField_948225"><span class="label">Additional Comments</span><span class="required-star">*</span></label>' +
-        '        <input id="CustomInteractionField_948225" name="CustomInteractionField_948225" class="required" type="text" maxlength="255">' +
+        '      <div class="field text CustomInteractionField_1219585">' +
+        '        <label for="CustomInteractionField_1219585"><span class="label">Additional Comments</span></label>' +
+        '        <input id="CustomInteractionField_1219585" name="CustomInteractionField_1219585" type="text" maxlength="255">' +
         '      </div>' +
         '    </div>' +
 
         '    <div class="section comment">' +
         '      <div class="field text comment">' +
-        '        <label for="comment"><span class="label">Additional Notes (Optional)</span></label>' +
+        '        <label for="comment"><span class="label">Comments</span></label>' +
         '        <textarea id="comment" name="comment"></textarea>' +
         '      </div>' +
         '    </div>' +
