--- a/Book A Speaker/bookaspeaker.html
+++ b/Book A Speaker/bookaspeaker.html
@@ -126,9 +126,9 @@
         '          <option value="932865">Other</option>' +
         '        </select>' +
         '      </div>' +
-        '      <div class="field text CustomInteractionField_933889 required">' +
-        '        <label for="CustomInteractionField_933889"><span class="label">If you selected "Other," please explain.</span><span class="required-star">*</span></label>' +
-        '        <input id="CustomInteractionField_933889" name="CustomInteractionField_933889" class="required" type="text" maxlength="255">' +
+        '      <div class="field text CustomInteractionField_933889">' +
+        '        <label for="CustomInteractionField_933889"><span class="label">If you selected "Other," please explain.</span></label>' +
+        '        <input id="CustomInteractionField_933889" name="CustomInteractionField_933889" type="text" maxlength="255">' +
         '      </div>' +
         '      <div class="field text CustomInteractionField_934913 required">' +
         '        <label for="CustomInteractionField_934913"><span class="label">Organization Name</span><span class="required-star">*</span></label>' +
@@ -146,9 +146,9 @@
         '          <option value="942081">Other</option>' +
         '        </select>' +
         '      </div>' +
-        '      <div class="field text CustomInteractionField_943105 required">' +
-        '        <label for="CustomInteractionField_943105"><span class="label">If you selected "Other," please explain.</span><span class="required-star">*</span></label>' +
-        '        <input id="CustomInteractionField_943105" name="CustomInteractionField_943105" class="required" type="text" maxlength="255">' +
+        '      <div class="field text CustomInteractionField_943105">' +
+        '        <label for="CustomInteractionField_943105"><span class="label">If you selected "Other," please explain.</span></label>' +
+        '        <input id="CustomInteractionField_943105" name="CustomInteractionField_943105" type="text" maxlength="255">' +
         '      </div>' +
         '      <div class="field date CustomInteractionField_945153 required">' +
         '        <label for="CustomInteractionField_945153"><span class="label">Event Date / Ideal Date</span><span class="required-star">*</span></label>' +
