--- a/Book A Speaker/bookaspeaker.html
+++ b/Book A Speaker/bookaspeaker.html
@@ -77,13 +77,15 @@
 
         '    <div class="section contact">' +
         '      <h3>Booking Inquiry Form</h3>' +
-        '      <div class="field text first-name required">' +
-        '        <label for="first-name"><span class="label">First Name</span><span class="required-star">*</span></label>' +
-        '        <input id="first-name" name="first-name" class="required" type="text">' +
-        '      </div>' +
-        '      <div class="field text last-name required">' +
-        '        <label for="last-name"><span class="label">Last Name</span><span class="required-star">*</span></label>' +
-        '        <input id="last-name" name="last-name" class="required" type="text">' +
+        '      <div class="form-row">' +
+        '        <div class="field text first-name required">' +
+        '          <label for="first-name"><span class="label">First Name</span><span class="required-star">*</span></label>' +
+        '          <input id="first-name" name="first-name" class="required" type="text">' +
+        '        </div>' +
+        '        <div class="field text last-name required">' +
+        '          <label for="last-name"><span class="label">Last Name</span><span class="required-star">*</span></label>' +
+        '          <input id="last-name" name="last-name" class="required" type="text">' +
+        '        </div>' +
         '      </div>' +
         '      <div class="form-row">' +
         '        <div class="field email email-address required">' +
@@ -112,39 +114,43 @@
 
         '    <div class="section custom-fields">' +
         '      <h3>Additional Information</h3>' +
-        '      <div class="field text CustomInteractionField_927745 required">' +
-        '        <label for="CustomInteractionField_927745"><span class="label">Speaker Fee Budget</span><span class="required-star">*</span></label>' +
-        '        <input id="CustomInteractionField_927745" name="CustomInteractionField_927745" class="number required" type="text" maxlength="255" placeholder="Enter amount in USD">' +
-        '      </div>' +
-        '      <div class="field text CustomInteractionField_928769 required">' +
-        '        <label for="CustomInteractionField_928769">Organization Type<span class="required-star">*</span></label>' +
-        '        <select id="CustomInteractionField_928769" name="CustomInteractionField_928769" class="required">' +
-        '          <option value="">Select...</option>' +
-        '          <option value="929793">School</option>' +
-        '          <option value="930817">Company</option>' +
-        '          <option value="931841">Church</option>' +
-        '          <option value="932865">Other</option>' +
-        '        </select>' +
+        '      <div class="form-row">' +
+        '        <div class="field text CustomInteractionField_927745 required">' +
+        '          <label for="CustomInteractionField_927745"><span class="label">Speaker Fee Budget</span><span class="required-star">*</span></label>' +
+        '          <input id="CustomInteractionField_927745" name="CustomInteractionField_927745" class="number required" type="text" maxlength="255" placeholder="Enter amount in USD">' +
+        '        </div>' +
+        '        <div class="field text CustomInteractionField_928769 required">' +
+        '          <label for="CustomInteractionField_928769">Organization Type<span class="required-star">*</span></label>' +
+        '          <select id="CustomInteractionField_928769" name="CustomInteractionField_928769" class="required">' +
+        '            <option value="">Select...</option>' +
+        '            <option value="929793">School</option>' +
+        '            <option value="930817">Company</option>' +
+        '            <option value="931841">Church</option>' +
+        '            <option value="932865">Other</option>' +
+        '          </select>' +
+        '        </div>' +
         '      </div>' +
         '      <div class="field text CustomInteractionField_933889">' +
         '        <label for="CustomInteractionField_933889"><span class="label">If you selected "Other," please explain.</span></label>' +
         '        <input id="CustomInteractionField_933889" name="CustomInteractionField_933889" type="text" maxlength="255">' +
         '      </div>' +
-        '      <div class="field text CustomInteractionField_934913 required">' +
-        '        <label for="CustomInteractionField_934913"><span class="label">Organization Name</span><span class="required-star">*</span></label>' +
-        '        <input id="CustomInteractionField_934913" name="CustomInteractionField_934913" class="required" type="text" maxlength="255">' +
-        '      </div>' +
-        '      <div class="field text CustomInteractionField_935937 required">' +
-        '        <label for="CustomInteractionField_935937">Type of Event<span class="required-star">*</span></label>' +
-        '        <select id="CustomInteractionField_935937" name="CustomInteractionField_935937" class="required">' +
-        '          <option value="">Select...</option>' +
-        '          <option value="936961">School / Youth Group / College</option>' +
-        '          <option value="937985">Conference</option>' +
-        '          <option value="939009">Corporate / Business</option>' +
-        '          <option value="940033">Non-profit / Community</option>' +
-        '          <option value="941057">Church / Faith Based Event</option>' +
-        '          <option value="942081">Other</option>' +
-        '        </select>' +
+        '      <div class="form-row">' +
+        '        <div class="field text CustomInteractionField_934913 required">' +
+        '          <label for="CustomInteractionField_934913"><span class="label">Organization Name</span><span class="required-star">*</span></label>' +
+        '          <input id="CustomInteractionField_934913" name="CustomInteractionField_934913" class="required" type="text" maxlength="255">' +
+        '        </div>' +
+        '        <div class="field text CustomInteractionField_935937 required">' +
+        '          <label for="CustomInteractionField_935937">Type of Event<span class="required-star">*</span></label>' +
+        '          <select id="CustomInteractionField_935937" name="CustomInteractionField_935937" class="required">' +
+        '            <option value="">Select...</option>' +
+        '            <option value="936961">School / Youth Group / College</option>' +
+        '            <option value="937985">Conference</option>' +
+        '            <option value="939009">Corporate / Business</option>' +
+        '            <option value="940033">Non-profit / Community</option>' +
+        '            <option value="941057">Church / Faith Based Event</option>' +
+        '            <option value="942081">Other</option>' +
+        '          </select>' +
+        '        </div>' +
         '      </div>' +
         '      <div class="field text CustomInteractionField_943105">' +
         '        <label for="CustomInteractionField_943105"><span class="label">If you selected "Other," please explain.</span></label>' +
