--- a/Book A Speaker/bookaspeaker.html
+++ b/Book A Speaker/bookaspeaker.html
@@ -156,17 +156,19 @@
         '        <label for="CustomInteractionField_943105"><span class="label">If you selected "Other," please explain.</span></label>' +
         '        <input id="CustomInteractionField_943105" name="CustomInteractionField_943105" type="text" maxlength="255">' +
         '      </div>' +
-        '      <div class="field date CustomInteractionField_945153 required">' +
-        '        <label for="CustomInteractionField_945153"><span class="label">Event Date / Ideal Date</span><span class="required-star">*</span></label>' +
-        '        <input id="CustomInteractionField_945153" name="CustomInteractionField_945153" class="validDate required" type="date" maxlength="255" placeholder="mm/dd/yyyy">' +
-        '      </div>' +
-        '      <div class="field text CustomInteractionField_946177 required">' +
-        '        <label for="CustomInteractionField_946177"><span class="label">Expected Audience Size Number</span><span class="required-star">*</span></label>' +
-        '        <input id="CustomInteractionField_946177" name="CustomInteractionField_946177" class="number required" type="text" maxlength="255">' +
-        '      </div>' +
-        '      <div class="field text CustomInteractionField_947201 required">' +
-        '        <label for="CustomInteractionField_947201"><span class="label">Event Location</span><span class="required-star">*</span></label>' +
-        '        <input id="CustomInteractionField_947201" name="CustomInteractionField_947201" class="required" type="text" maxlength="255">' +
+        '      <div class="form-row form-row-3">' +
+        '        <div class="field date CustomInteractionField_945153 required">' +
+        '          <label for="CustomInteractionField_945153"><span class="label">Event Date / Ideal Date</span><span class="required-star">*</span></label>' +
+        '          <input id="CustomInteractionField_945153" name="CustomInteractionField_945153" class="validDate required" type="date" maxlength="255" placeholder="mm/dd/yyyy">' +
+        '        </div>' +
+        '        <div class="field text CustomInteractionField_946177 required">' +
+        '          <label for="CustomInteractionField_946177"><span class="label">Expected Audience Size Number</span><span class="required-star">*</span></label>' +
+        '          <input id="CustomInteractionField_946177" name="CustomInteractionField_946177" class="number required" type="text" maxlength="255">' +
+        '        </div>' +
+        '        <div class="field text CustomInteractionField_947201 required">' +
+        '          <label for="CustomInteractionField_947201"><span class="label">Event Location</span><span class="required-star">*</span></label>' +
+        '          <input id="CustomInteractionField_947201" name="CustomInteractionField_947201" class="required" type="text" maxlength="255">' +
+        '        </div>' +
         '      </div>' +
         '    </div>' +
 
