--- a/Donate/donateform.html
+++ b/Donate/donateform.html
@@ -286,7 +286,8 @@
             justify-content: center;
             text-align: center;
             padding: 2rem;
-            min-height: 100vh;
+            height: 100vh;
+            overflow: hidden;
         }
 
         .donation-success img {
