--- a/Book A Speaker/bookaspeaker.html
+++ b/Book A Speaker/bookaspeaker.html
@@ -207,7 +207,8 @@
 
         var successHtml763905 = '<div class="donation-success">' +
             '<img src="../shared/Thanks You!.png" alt="Love Life Now Foundation Thanks You!">' +
-            '<h2>Thank You!</h2>' +
+            '<h2>DV Awareness Presentation</h2>' +
+            '<h2>Booking Inquiry Received!</h2>' +
             '<p>Someone will follow-up with you in 48 hours for more information.</p>' +
             '<img src="../shared/Thanks You!.png" alt="Love Life Now Foundation Thanks You!">' +
             '</div>';
