--- a/shared/preview/preview-book-a-speaker.html
+++ b/shared/preview/preview-book-a-speaker.html
@@ -26,7 +26,8 @@
             justify-content: center;
             text-align: center;
             padding: 2rem;
-            min-height: 100vh;
+            height: 100vh;
+            overflow: hidden;
         }
         .donation-success img { max-width: 180px; height: auto; margin: 1rem 0; }
         .donation-success h2 { color: var(--lln-purple-700); font-family: var(--font-heading); font-size: 1.5rem; margin: 1rem 0; }
@@ -36,7 +37,8 @@
 <body>
     <div class="donation-success">
         <img src="Thanks You!.png" alt="Love Life Now Foundation Thanks You!">
-        <h2>Thank You!</h2>
+        <h2>DV Awareness Presentation</h2>
+        <h2>Booking Inquiry Received!</h2>
         <p>Someone will follow-up with you in 48 hours for more information.</p>
         <img src="Thanks You!.png" alt="Love Life Now Foundation Thanks You!">
     </div>
