--- a/shared/preview/preview-volunteer.html
+++ b/shared/preview/preview-volunteer.html
@@ -26,7 +26,8 @@
             justify-content: center;
             text-align: center;
             padding: 2rem;
-            min-height: 100vh;
+            height: 100vh;
+            overflow: hidden;
         }
         .donation-success img { max-width: 180px; height: auto; margin: 1rem 0; }
         .donation-success h2 { color: var(--lln-purple-700); font-family: var(--font-heading); font-size: 1.5rem; margin: 1rem 0; }
