--- a/Book A Speaker/bookaspeaker.html
+++ b/Book A Speaker/bookaspeaker.html
@@ -209,8 +209,8 @@
             '<img src="../shared/Thanks You!.png" alt="Love Life Now Foundation Thanks You!">' +
             '<h2>DV Awareness Presentation</h2>' +
             '<h2>Booking Inquiry Received!</h2>' +
-            '<p>Someone will follow-up with you in 48 hours for more information.</p>' +
-            '<img src="../shared/Thanks You!.png" alt="Love Life Now Foundation Thanks You!">' +
+            '<p>Submission of this form does not confirm booking.</p>' +
+            '<p>Someone will respond within 2 to 3 business days.</p>' +
             '</div>';
 
         (function($) {
