--- a/shared/preview/preview-book-a-speaker.html
+++ b/shared/preview/preview-book-a-speaker.html
@@ -39,8 +39,8 @@
         <img src="Thanks You!.png" alt="Love Life Now Foundation Thanks You!">
         <h2>DV Awareness Presentation</h2>
         <h2>Booking Inquiry Received!</h2>
-        <p>Someone will follow-up with you in 48 hours for more information.</p>
-        <img src="Thanks You!.png" alt="Love Life Now Foundation Thanks You!">
+        <p>Submission of this form does not confirm booking.</p>
+        <p>Someone will respond within 2 to 3 business days.</p>
     </div>
 </body>
 </html>
