--- a/Volunteer/VolunteerForm.html
+++ b/Volunteer/VolunteerForm.html
@@ -165,7 +165,7 @@
                 </div>
 
                 <div class="btn-group">
-                    <input class="btn btn-submit btn-submit-interaction" type="submit" value="Sign Up to Volunteer" />
+                    <input class="btn btn-submit btn-submit-interaction" type="submit" value="Submit" />
                 </div>
             </form>
         </div>
