--- a/Volunteer/VolunteerForm.html
+++ b/Volunteer/VolunteerForm.html
@@ -139,14 +139,12 @@
                             <input id="phone-number" name="phone-number" class="phoneUS" type="tel" placeholder="(555) 123-4567">
                         </div>
                     </div>
-                    <p class="consent">We'll use this information to contact you about volunteer opportunities.</p>
                 </div>
 
                 <div class="section custom-fields">
-                    <h3>Volunteer Interest</h3>
                     <div class="field text CustomInteractionField_1037313 required">
                         <label for="CustomInteractionField_1037313">
-                            <span class="label">Which volunteer opportunity are you interested in?</span>
+                            <span class="label">What type of volunteer opportunity are you interested in?</span>
                             <span class="required-star">*</span>
                         </label>
                         <input id="CustomInteractionField_1037313" name="CustomInteractionField_1037313" class="required" type="text" maxlength="255" placeholder="example: Drive support, host LLN event">
